--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,8 +49,7 @@ body {
   position: sticky;
   top: 0;
   transition: all .5s ease-in;
-  /* box-shadow: 0 0 5px .5px var(--dark-red); */
-  box-shadow: 0 0 5px 0px #26040373;
+  box-shadow: 0 0 3px .5px var(--dark-red);
 }
 .__app-scriptures-container,
 .__app-scriptures-player,
