--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,7 +30,7 @@ body {
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: s;
   color: var(--dark-grey)!important;
 }
 
@@ -151,4 +151,24 @@ body {
   color: var(--blue);
   /* box-shadow: 0 0 3px 1px var(--dark-grey); */
   z-index: 1000;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
