--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,7 +30,7 @@ body {
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
-  overflow-y: s;
+  overflow-y: auto;
   color: var(--dark-grey)!important;
 }
 
