bm: result and result mock, with overflow-y on parent

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,7 @@
   --player-width: 60px;
   --player-right: 20px;
   --player-bottom-radius: 30px;
+  --app-scripture-result-item: 60px;
 }
 
 * {
@@ -28,7 +29,8 @@ body {
   padding: 0;
   background-color: var(--white);
   height: 100vh;
-  width: 100vw;
+  width: column;
+  max-height: 100vw;
   overflow-x: hidden;
   overflow-y: auto;
   color: var(--dark-grey)!important;
@@ -44,12 +46,57 @@ body {
 
 .__app-scripture-search-pane {
   position: fixed;
+  flex-direction: column;
   height: 100%;
   width: 300px;
   background-color: var(--white);
   right: 0;
   top: 0;
   box-shadow: 0 0 3px 0.5px #adb5bd;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.__app--scripture__result--item {
+  flex-direction: column;
+  max-height: var(--app-scripture-result-item);
+  cursor: pointer;
+  transition: ease-in .3s ease-out;
+}
+
+.__app--scripture__result--item:last-of-type {
+  margin-bottom: .5em;
+}
+
+.__app--scripture__result--item:hover {
+  box-shadow: 0px 3px 7px #e8e5e5;
+}
+
+.__app--scripture__result--item--mock:hover {
+  box-shadow: none!important;
+}
+
+.__app--scripture__result--item__reference--mock,
+.__app--scripture__result--item__passage--mock {
+  height: 12px;
+  background-color: #e8e5e5;
+  border-radius: 8px;
+}
+
+.__app--scripture__result--item__reference--mock {
+  width: 30px;
+}
+
+.__app--scripture__result--item__passage--mock {
+  width: 60px; 
+}
+
+.__app--scripture__result--item__reference {
+  font-size: 12px;
+}
+
+.__app--scripture__result--item__passage {
+  font-size: 14px;
 }
 
 .__app-scripture-toolbar {
